agregar bloque de enlace y estilos para la pagina galleta de la fortuna

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -111,3 +111,17 @@
 .image {
   image-rendering: -webkit-optimize-contrast;
 }
+
+
+.imageElement--cookie {
+  width: 100% !important;
+  max-width: 100%;
+  background: #f0f0f0;
+  object-fit: contain;
+  transition: transform 0.5s;
+}
+
+.imageElement--cookie:hover{
+  transform: scale(1.05);
+}
+
